<resources>
    <string name="app_name">Calculadora</string>
    <string name="c">C</string>
    <string name="text_percent">%</string>
    <string name="text_bar">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="text_multi">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="text_soma">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="text_sub">-</string>
    <string name="ac">AC</string>
    <string name="_0">0</string>
    <string name="text_dot">.</string>
    <string name="text_equal">=</string>
</resources>