<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_data"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="28sp"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:visibility="gone"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="#7C7B7B"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linecolor"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onDigitClick"

            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/operatorbutton"
                android:layout_height="wrap_content"
                android:onClick="onClearClick"
                android:text="@string/c" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/digitbutton"
                android:layout_height="wrap_content"
                android:onClick="onBackClick"
                app:icon="@drawable/ic_back"
                app:iconTint="@color/btnBackground2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_modulo"
                style="@style/operatorbutton"
                android:layout_height="wrap_content"
                android:onClick="onOperatorClick"
                android:text="@string/text_percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/operatorbutton"
                android:layout_height="wrap_content"
                android:onClick="onOperatorClick"
                android:text="@string/text_bar" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onDigitClick"

            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/digitbutton"
                android:layout_height="wrap_content"
                android:onClick="onDigitClick"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/digitbutton"
                android:layout_height="wrap_content"
                android:onClick="onDigitClick"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_9"
                android:layout_height="wrap_content"
                android:onClick="onDigitClick"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_multiply"
                android:layout_height="wrap_content"
                android:onClick="onOperatorClick"
                android:text="@string/text_multi" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/digitbutton"
                android:layout_height="wrap_content"
                android:onClick="onDigitClick"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/digitbutton"
                android:layout_height="wrap_content"
                android:onClick="onDigitClick"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/digitbutton"
                android:layout_height="wrap_content"
                android:onClick="onDigitClick"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_adc"
                style="@style/operatorbutton"
                android:layout_height="wrap_content"
                android:onClick="onOperatorClick"
                android:text="@string/text_soma" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/digitbutton"
                android:layout_height="wrap_content"
                android:onClick="onDigitClick"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/digitbutton"
                android:layout_height="wrap_content"
                android:onClick="onDigitClick"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/digitbutton"
                android:layout_height="wrap_content"
                android:onClick="onDigitClick"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtract"
                style="@style/operatorbutton"
                android:layout_height="wrap_content"
                android:onClick="onOperatorClick"
                android:text="@string/text_sub" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_allclear"
                android:layout_height="wrap_content"
                android:onClick="onAllClearClick"
                android:textSize="20sp"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/digitbutton"
                android:layout_height="wrap_content"
                android:onClick="onDigitClick"
                android:text="@string/_0" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_dot"
                android:layout_height="wrap_content"
                android:onClick="onDigitClick"
                android:text="@string/text_dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/operatorbutton"
                android:layout_height="wrap_content"
                android:onClick="onEqualClick"
                android:textColor="@color/white"
                android:backgroundTint="@color/btnBackground2"
                android:text="@string/text_equal" />


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>